Spacing and wording fixes.

--- a/hgtv/static/sass/app.sass
+++ b/hgtv/static/sass/app.sass
@@ -108,18 +108,6 @@ header
     font-size: 22px
     line-height: 40px
     margin-bottom: 80px
-#live-head
-  //background-color: #856A91
-  position: relative
-  z-index: 99
-  top: 30px
-  text-decoration: blink
-  left: 12px
-  font-size: 22px
-  font-style: bold
-  color: #fff
-.live-stream
-  margin-bottom: 30px 
 
 .home-grey-bg
   //background-image: image-url('bg.png')
